[gd_scene load_steps=2 format=3 uid="uid://mu7emlxphf7w"]

[ext_resource type="Script" path="res://scenes/ui_elements/PauseMenu.gd" id="1_u3k1v"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_u3k1v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
